<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="Select the method that will be used to get weather forecast"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_insert_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                android:text="Insert City"
                android:textColor="@color/textWhitePrimary"/>

            <Button
                android:id="@+id/btn_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                android:text="Use Current Location"
                android:textColor="@color/textWhitePrimary"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>